--- a/DockerApiDotNet.csproj
+++ b/DockerApiDotNet.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -46,6 +46,7 @@
     <Compile Include="Data\Container.cs" />
     <Compile Include="Data\ContainerConfig.cs" />
     <Compile Include="Data\ContainerDetails.cs" />
+    <Compile Include="Data\ContainerProcesses.cs" />
     <Compile Include="Data\HostConfig.cs" />
     <Compile Include="Data\NetworkSettings.cs" />
     <Compile Include="Data\NetworkSettingsPortBind.cs" />
