--- a/DockerApiDotNet.Console/DockerApiDotNet.Console.csproj
+++ b/DockerApiDotNet.Console/DockerApiDotNet.Console.csproj
@@ -1,18 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{695FF03D-A64A-4092-A851-D50080C5D14C}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{92DFDEA5-D146-4543-BD5C-5CFCED0E182A}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DockerApiDotNet</RootNamespace>
-    <AssemblyName>DockerApiDotNet</AssemblyName>
+    <RootNamespace>DockerApiDotNet.Console</RootNamespace>
+    <AssemblyName>DockerApiDotNet.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,31 +39,19 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Mono.Posix" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\Container.cs" />
-    <Compile Include="Data\ContainerDiff.cs" />
-    <Compile Include="Data\ContainerConfig.cs" />
-    <Compile Include="Data\ContainerDetails.cs" />
-    <Compile Include="Data\ContainerProcesses.cs" />
-    <Compile Include="Data\HostConfig.cs" />
-    <Compile Include="Data\NetworkSettings.cs" />
-    <Compile Include="Data\NetworkSettingsPortBind.cs" />
-    <Compile Include="Data\Port.cs" />
-    <Compile Include="Data\RestartPolicy.cs" />
-    <Compile Include="Data\State.cs" />
-    <Compile Include="Data\SystemInfo.cs" />
-    <Compile Include="Data\VersionInfo.cs" />
-    <Compile Include="DockerAPIClient.cs" />
-    <Compile Include="HttpOverSocketRequest.cs" />
-    <Compile Include="HttpOverSocketResponse.cs" />
-    <Compile Include="JsonConverters\UnixDateTimeConverter.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DockerApiDotNet\DockerApiDotNet.csproj">
+      <Project>{695ff03d-a64a-4092-a851-d50080c5d14c}</Project>
+      <Name>DockerApiDotNet</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
